smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/strings/text-block-invalid-unicode.smithy
// Parse error at line 5, column 11 near `)\n`: Invalid unclosed unicode escape found in string
namespace smithy.example

@documentation("""
    \ua""")
string MyString
